<resources>
    <string name="app_name">Cheese Remember</string>
    <string name="new_person">New Cheese</string>
    <string name="edit_person">Edit Cheese</string>

    <string name="action_settings">Settings</string>
    <string name="menu_add">Add</string>
    <string name="menu_export">Export</string>
    <string name="menu_import">Import</string>

    <string name="recent_toggle">Recent</string>
    <string name="name_toggle">Name</string>
    <string name="place_toggle">Place of Purchase</string>
    <string name="keywords_toggle">Keywords</string>
    <string name="desc_toggle">Description</string>
    <string name="comments_toggle">Comments</string>

    <string name="name_hint">Cheese Name</string>
    <string name="place_hint">Place of Purchase</string>
    <string name="tags_hint">Keywords</string>
    <string name="desc_hint">Description</string>
    <string name="comments_hint">Comments</string>

    <string name="button_add">Add Cheese</string>
    <string name="button_edit">Edit</string>
    <string name="button_delete">Delete</string>

    <string name="button_save">Save Cheese</string>
    <string name="button_update">Update Cheese</string>

    <string name="lose_changes_alert">Forget Changes?</string>
    <string name="lose_changes_alert_text">You are going to lose your changes if you continue, are you sure?</string>

    <string name="menu_search">SEARCH!</string>

    <string name="delete_person_alert">Delete?</string>
    <string name="delete_person_alert_text">Are you sure you want to delete this contact?</string>

    <string name="SD_not_mounted">SD not mounted</string>
    <string name="export_failed">Export Failed</string>
    <string name="DB_saved_to_SD">DB saved to SD: </string>
    <string name="not_implemented_yet">Not implemented yet</string>

    <string name="yes">Yes</string>
    <string name="no">No</string>

    <string name="NotificationTag">CheeseRemember</string>
    <string name="Notification">Have you met any new cheeses today?</string>
</resources>
