<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.v7.widget.Toolbar
        android:id="@+id/my_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:elevation="4dp"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"/>


    <LinearLayout android:orientation="horizontal"
                  android:layout_height="wrap_content"
                  android:layout_width="fill_parent"
                  android:layout_below="@+id/my_toolbar"
                  android:layout_alignParentStart="true"
                  android:layout_alignParentEnd="true"
                  android:id="@+id/searchButtons"
                  style="?android:attr/buttonBarStyle"
        >
        <ToggleButton
            android:layout_width="0dip"
            android:textSize="10dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:textOff="@string/recent_toggle"
            android:textOn="@string/recent_toggle"
            android:id="@+id/searchOptionButtonRecent"
            android:background="@drawable/search_option_toggle_buttons"
            android:includeFontPadding="false"
            android:layout_marginTop="@dimen/search_button_margin_top"
            android:layout_marginBottom="@dimen/search_button_margin_bottom"
            />

        <ToggleButton

            android:layout_width="0dip"
            android:textSize="10dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:textOff="@string/name_toggle"
            android:textOn="@string/name_toggle"
            android:id="@+id/searchOptionButtonName"
            android:background="@drawable/search_option_toggle_buttons"
            android:includeFontPadding="false"
            android:layout_marginTop="@dimen/search_button_margin_top"
            android:layout_marginBottom="@dimen/search_button_margin_bottom"
            />

        <ToggleButton

            android:layout_width="0dip"
            android:textSize="10dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:textOff="@string/place_toggle"
            android:textOn="@string/place_toggle"
            android:id="@+id/searchOptionButtonPlaceOfPurchase"
            android:background="@drawable/search_option_toggle_buttons"
            android:includeFontPadding="false"
            android:layout_marginTop="@dimen/search_button_margin_top"
            android:layout_marginBottom="@dimen/search_button_margin_bottom"
            />

        <ToggleButton
            android:layout_width="0dip"
            android:textSize="10dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:textOff="@string/keywords_toggle"
            android:textOn="@string/keywords_toggle"
            android:id="@+id/searchOptionButtonKeywords"
            android:background="@drawable/search_option_toggle_buttons"
            android:includeFontPadding="false"
            android:layout_marginTop="@dimen/search_button_margin_top"
            android:layout_marginBottom="@dimen/search_button_margin_bottom"
            />

        <ToggleButton
            android:layout_width="0dip"
            android:textSize="10dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:textOff="@string/desc_toggle"
            android:textOn="@string/desc_toggle"
            android:id="@+id/searchOptionButtonDesc"
            android:background="@drawable/search_option_toggle_buttons"
            android:includeFontPadding="false"
            android:layout_marginTop="@dimen/search_button_margin_top"
            android:layout_marginBottom="@dimen/search_button_margin_bottom"
            />

        <ToggleButton
            android:layout_width="0dip"
            android:textSize="10dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:textOff="@string/comments_toggle"
            android:textOn="@string/comments_toggle"
            android:id="@+id/searchOptionButtonComments"
            android:background="@drawable/search_option_toggle_buttons"
            android:includeFontPadding="false"
            android:layout_marginTop="@dimen/search_button_margin_top"
            android:layout_marginBottom="@dimen/search_button_margin_bottom"
            />
    </LinearLayout>

    <ListView
        android:id="@+id/list"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_below="@+id/searchButtons"
        android:layout_above="@+id/linearLayout">

    </ListView>

    <LinearLayout android:orientation="horizontal"
        android:layout_height="wrap_content"
        android:layout_width="fill_parent"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        style="?android:attr/buttonBarStyle"
        android:id="@+id/addPersonLayout">

        <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_add"
        android:id="@+id/addPerson"
        style="?android:attr/buttonBarButtonStyle"
        />
    </LinearLayout>




</RelativeLayout>

<!--
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity"
    -->
