<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:tools="http://schemas.android.com/tools"
xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <android.support.v7.widget.Toolbar
        android:id="@+id/my_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:elevation="4dp"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:paddingTop="20dp"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:text="@string/place_hint"
        android:id="@+id/popTextStatic"
        android:layout_below="@+id/description"
        android:layout_alignParentStart="true"
        android:textSize="16dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:scrollbars = "vertical"
        android:textIsSelectable="true"
        android:text="New Text"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:id="@+id/placeOfPurchase"
        android:layout_below="@+id/popTextStatic"
        android:layout_alignParentStart="true"
        android:textSize="20dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:paddingTop="20dp"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:text="@String/desc_hint"
        android:id="@+id/dTextStatic"
        android:layout_alignParentStart="true"
        android:textSize="16dp"
        android:layout_below="@+id/my_toolbar" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:text="New Text"
        android:scrollbars = "vertical"
        android:textIsSelectable="true"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:layout_weight="1"
        android:id="@+id/description"
        android:layout_below="@+id/dTextStatic"
        android:layout_alignParentStart="true"
        android:textSize="20dp" />


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:paddingTop="20dp"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:text="@String/comments_hint"
        android:id="@+id/iTextStatic"
        android:layout_below="@+id/placeOfPurchase"
        android:layout_alignParentStart="true"
        android:textSize="16dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:scrollbars = "vertical"
        android:textIsSelectable="true"
        android:text="New Text"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:id="@+id/comments"
        android:layout_below="@+id/iTextStatic"
        android:layout_alignParentStart="true"
        android:textSize="20dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:paddingTop="20dp"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:text="@String/tags_hint"
        android:id="@+id/kTextStatic"
        android:layout_below="@+id/interests"
        android:layout_alignParentStart="true"
        android:textSize="16dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:scrollbars = "vertical"
        android:textIsSelectable="true"
        android:text="New Text"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:id="@+id/keywords"
        android:layout_below="@+id/kTextStatic"
        android:layout_alignParentStart="true"
        android:textSize="20dp" />


    <LinearLayout android:orientation="horizontal"
        android:layout_height="wrap_content"
        android:layout_width="fill_parent"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        style="?android:attr/buttonBarStyle"
        >
        <Button

            android:layout_width="0dip"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/button_edit"
            android:id="@+id/editPerson"
            style="?android:attr/buttonBarButtonStyle"
            />

        <Button
            android:layout_width="0dip"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/button_delete"
            android:id="@+id/deletePerson"
            style="?android:attr/buttonBarButtonStyle"
            />
    </LinearLayout>

</LinearLayout>
